<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    tools:ignore="UnusedNavigation"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.keep_informed.interactors.home.ui.HomeFragment"
        android:label="@string/label_news"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_offlineNewsFragment"
            app:destination="@id/navigation_bookmark" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_searchMapFragment"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="br.com.keep_informed.interactors.bookmark.ui.BookMarkFragment"
        android:label="@string/label_bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/navigation_my_account"
        android:name="br.com.keep_informed.interactors.myaccount.ui.MyAccountFragment"
        android:label="@string/label_my_account"
        tools:layout="@layout/fragment_my_account" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="br.com.keep_informed.interactors.map.ui.SearchMapFragment"
        android:label="@string/label_maps"
        tools:layout="@layout/fragment_search_map"/>



    <fragment
        android:id="@+id/navigation_search"
        tools:layout="@layout/fragment_search"
        android:name="br.com.keep_informed.interactors.search.ui.SearchFragment"
        android:label="" />
    <activity
        android:id="@+id/navigation_detail"
        android:name="br.com.keep_informed.interactors.details.ui.DetailActivity"
        tools:layout="@layout/activity_detail">

        <argument
            android:name="extra-article"
            app:argType="br.com.fiap.mob18.newsapilibrary.model.Article" />
    </activity>
</navigation>