<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>
            <import type="android.view.View"/>
            <variable name="isLoading" type="Boolean" />
        </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".interactors.signin.ui.SignInActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideStart"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideEnd"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/formGroup"
                android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
                app:constraint_referenced_ids="brandingImageView,userNameTextInputLayout,passwordTextInputLayout,errorTextView,signInButton,signUpButton,continueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <ImageView
                android:id="@+id/brandingImageView"
                android:layout_width="144dp"
                android:layout_height="127dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/brandingImageView"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                android:layout_marginTop="@dimen/activity_vertical_margin_2x"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_username"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/userNameTextInputLayout"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_password"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/errorTextView"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                android:textColor="@color/colorError"
                tools:text="Error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/signInButton"
                style="@style/buttonPrimary"
                app:layout_constraintTop_toBottomOf="@id/errorTextView"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/label_sign_in"
                android:layout_width="0dp"
                android:layout_height="50dp"/>

            <Button
                android:id="@+id/signUpButton"
                style="@style/buttonPrimaryReverse"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                app:layout_constraintTop_toBottomOf="@id/signInButton"
                android:text="@string/label_do_not_have_account"
                android:layout_width="0dp"
                android:layout_height="44dp"/>

            <TextView
                android:id="@+id/continueTextView"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@id/guideBottom"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                android:text="@string/label_continue_without_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/loadingIndicator"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/progressbarSize"
                android:layout_height="@dimen/progressbarSize"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>